# stride-gpt-catalog

./: .gitignore  FILES.md  README.md  REPLACING_THE_FORK.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
app/pages/: 1_Control_Catalog.py
examples/: peopledesk_report.md
testapp/: AegisPressWP_Cloud_Description.txt  BankLedgerPro_OnPrem_Description.txt  PaymentGatewayDescription.txt  README.md  peopledesk_intake.json
tests/: conftest.py  test_catalog_data.py  test_catalog_loader.py  test_gap.py  test_generators_deterministic.py  test_intake.py  test_llm_engine.py  test_models.py  test_out_of_catalog.py  test_pci.py  test_pdf_export.py  test_pipeline.py  test_report.py  test_resolver.py
threatcatalog/: __init__.py  cli.py  gap.py  generators.py  intake.py  models.py  out_of_catalog.py  pci.py  pdf_export.py  pipeline.py  report.py
threatcatalog/catalog/: __init__.py  loader.py  resolver.py
threatcatalog/catalog/data/: ai_agentic.yaml  ai_generative.yaml  ai_llm.yaml  ai_llm_tools.yaml  ai_mcp.yaml  base.yaml  platform_api.yaml  platform_cloud.yaml  platform_mobile.yaml  platform_onprem.yaml  platform_saas.yaml  platform_web.yaml
threatcatalog/llm/: __init__.py  engine.py  prompts.py  provider.py
